<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/negro"
    android:id="@+id/scrollView2" >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/negro">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:padding="30dp">
            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:id="@+id/imageView"
                android:src="@drawable/logo_metronomo" />
            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"/>


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cad_ad_titulo"
            style="@style/CharlieTVStyleTexto"
            android:padding="20dp"
            android:textSize="30sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cad_ad_contenido"
            style="@style/CharlieTVStyleTexto"
            android:padding="20dp"
            android:textSize="20sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cad_ad_abajo"
            style="@style/CharlieTVStyleTexto"
            android:padding="20dp"
            android:textSize="10sp" />
    </LinearLayout>
</ScrollView>